Add zlib dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ target_compile_features(${PROJECT_NAME}
 )
 target_link_libraries(${PROJECT_NAME}
   PUBLIC
+    CONAN_PKG::zlib
     ${JUCE_DEPENDENCIES}
 )
 
