--- a/juce_config.h.in
+++ b/juce_config.h.in
@@ -35,15 +35,19 @@
 
 // BEGIN SECTION A
 
-#define JUCE_DISPLAY_SPLASH_SCREEN 0
+#ifndef JUCE_DISPLAY_SPLASH_SCREEN
+  #define JUCE_DISPLAY_SPLASH_SCREEN 0
+#endif
+
+#ifndef JUCE_USE_DARK_SPLASH_SCREEN
+  #define JUCE_USE_DARK_SPLASH_SCREEN 1
+#endif
 
 #ifndef JUCE_REPORT_APP_USAGE
- #define JUCE_REPORT_APP_USAGE 1
+  #define JUCE_REPORT_APP_USAGE 1
 #endif
 
 // END SECTION A
-
-#define JUCE_USE_DARK_SPLASH_SCREEN 1
 
 //==============================================================================
 
