--- a/juce_config.h.in
+++ b/juce_config.h.in
@@ -35,17 +35,13 @@
 
 // BEGIN SECTION A
 
-#ifndef JUCE_DISPLAY_SPLASH_SCREEN
-  #define JUCE_DISPLAY_SPLASH_SCREEN 0
-#endif
+#cmakedefine01 JUCE_DISPLAY_SPLASH_SCREEN
 
 #ifndef JUCE_USE_DARK_SPLASH_SCREEN
   #define JUCE_USE_DARK_SPLASH_SCREEN 1
 #endif
 
-#ifndef JUCE_REPORT_APP_USAGE
-  #define JUCE_REPORT_APP_USAGE 1
-#endif
+#cmakedefine01 JUCE_REPORT_APP_USAGE
 
 // END SECTION A
 
@@ -274,17 +270,13 @@
 //==============================================================================
 // juce_graphics flags:
 
-#ifndef JUCE_USE_COREIMAGE_LOADER
-  // #define JUCE_USE_COREIMAGE_LOADER 1
-#endif
-
 #ifndef JUCE_USE_DIRECTWRITE
   // #define JUCE_USE_DIRECTWRITE 1
 #endif
 
-#ifndef JUCE_DISABLE_COREGRAPHICS_FONT_SMOOTHING
-  // #define JUCE_DISABLE_COREGRAPHICS_FONT_SMOOTHING 0
-#endif
+#cmakedefine01 JUCE_USE_COREIMAGE_LOADER
+#cmakedefine01 JUCE_DISABLE_COREGRAPHICS_FONT_SMOOTHING
+#cmakedefine01 USE_COREGRAPHICS_RENDERING
 
 //==============================================================================
 // juce_gui_basics flags:
