--- a/juce_config.h.in
+++ b/juce_config.h.in
@@ -36,11 +36,7 @@
 // BEGIN SECTION A
 
 #cmakedefine01 JUCE_DISPLAY_SPLASH_SCREEN
-
-#ifndef JUCE_USE_DARK_SPLASH_SCREEN
-  #define JUCE_USE_DARK_SPLASH_SCREEN 1
-#endif
-
+#cmakedefine01 JUCE_USE_DARK_SPLASH_SCREEN
 #cmakedefine01 JUCE_REPORT_APP_USAGE
 
 // END SECTION A
@@ -270,13 +266,17 @@
 //==============================================================================
 // juce_graphics flags:
 
+#ifndef JUCE_USE_COREIMAGE_LOADER
+  // #define JUCE_USE_COREIMAGE_LOADER 1
+#endif
+
 #ifndef JUCE_USE_DIRECTWRITE
   // #define JUCE_USE_DIRECTWRITE 1
 #endif
 
-#cmakedefine01 JUCE_USE_COREIMAGE_LOADER
-#cmakedefine01 JUCE_DISABLE_COREGRAPHICS_FONT_SMOOTHING
-#cmakedefine01 USE_COREGRAPHICS_RENDERING
+#ifndef JUCE_DISABLE_COREGRAPHICS_FONT_SMOOTHING
+  // #define JUCE_DISABLE_COREGRAPHICS_FONT_SMOOTHING 0
+#endif
 
 //==============================================================================
 // juce_gui_basics flags:
